<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.CreapedFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="50dp" />

    <EditText
        android:id="@+id/ptdocumento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/ptdocumento"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ptrazonsocial"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/ptrazonsocial"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/ptdocumento" />

    <EditText
        android:id="@+id/ptrucdni"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/ptrucdni"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/ptrazonsocial" />

    <EditText
        android:id="@+id/ptdireccion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/ptdireccion"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/ptrucdni" />

    <EditText
        android:id="@+id/ptreparto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/ptreparto"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/ptdireccion" />

    <EditText
        android:id="@+id/ptvendedor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/ptvendedor"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/ptreparto" />

    <EditText
        android:id="@+id/ptdescripcionproducto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/ptdescripcionproducto"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/ptunidadproducto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/ptunidad"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/ptdescripcionproducto" />

    <EditText
        android:id="@+id/ptcantidadproducto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/ptcantidad"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/ptunidadproducto" />

    <EditText
        android:id="@+id/ptprecioproducto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/ptprecio"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/ptcantidadproducto" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tvdetallepedido"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/ptvendedor" />

    <Button
        android:id="@+id/btnagregardetalle"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:text="@string/textbtnagregardetalle"
        android:textSize="8sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/ptprecioproducto" />

    <Button
        android:id="@+id/btnregistrar"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginEnd="24dp"
        android:text="@string/textbtnregistrar"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2" />

    <Button
        android:id="@+id/btncancelar"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:text="@string/textbtncancelar"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnregistrar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvdetallepedido"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btncancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvimportes" />

    <TextView
        android:id="@+id/tvdescripciones"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tvdescripcion"
        app:layout_constraintEnd_toStartOf="@+id/tvunidades"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnagregardetalle" />

    <TextView
        android:id="@+id/tvunidades"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tviunidad"
        app:layout_constraintEnd_toStartOf="@+id/tvcantidades"
        app:layout_constraintStart_toEndOf="@+id/tvdescripciones"
        app:layout_constraintTop_toBottomOf="@+id/btnagregardetalle" />

    <TextView
        android:id="@+id/tvcantidades"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tvcantidad"
        app:layout_constraintEnd_toStartOf="@+id/tvimportes"
        app:layout_constraintStart_toEndOf="@+id/tvunidades"
        app:layout_constraintTop_toBottomOf="@+id/btnagregardetalle" />

    <TextView
        android:id="@+id/tvimportes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tvimporter"
        app:layout_constraintEnd_toStartOf="@+id/tvacciones"
        app:layout_constraintStart_toEndOf="@+id/tvcantidades"
        app:layout_constraintTop_toBottomOf="@+id/btnagregardetalle" />

    <TextView
        android:id="@+id/tvacciones"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tvacciones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvimportes"
        app:layout_constraintTop_toBottomOf="@+id/btnagregardetalle" />

</androidx.constraintlayout.widget.ConstraintLayout>